  printing can be recoverd via SCIPmessageSetErrorPrintingDefault(), (see pub_message.h)
- method SCIPprintError() does not need the file stream anymore. The error is written via the error message callback.
- since the error messages are not handled via the messages handler anymore, the parameter list of SCIPmessagehdlrCreate()
  changes; see pub_message.h and type_message.h.
- removed SCIPparamSetBool(), please use SCIPchgBoolParam()
- removed SCIPparamSetInt(), please use SCIPchgIntParam()
- removed SCIPparamSetLongint(), please use SCIPchgLongintParam()
- removed SCIPparamSetReal(), please use SCIPchgRealParam()
- removed SCIPparamSetChar(), please use SCIPchgCharParam()
- removed SCIPparamSetString(), please use SCIPchgStringParam()
- remove SCIPcolPrint() and SCIProwPrint(), please use SCIPprintCol() SCIPprintRow() see scip.h
- new method SCIPmemccpy() in pub_misc.h and misc.c which copies either a specified number of charcters of a source
  string to a destination string or until it hits a stoping character
- new method SCIPchgCutoffboundDive() to change the cutoffbound in diving mode
- added forgotten implementation of SCIPfreeMemorySize(), SCIPfreeMemorySizeNull() in scip.h and BMSfreeMemorySize(),
  BMSfreeMemorySizeNull() in memory.h
- new methods BMSmoveMemory(), BMSmoveMemoryArray(), BMSmoveMemorySize() and corresponding  BMSmoveMemory_call() in
  memory.{h,c} too move memory elements
- added public wrapper functions for calling constraint handler callback methods for a single constraint:
  SCIPactiveCons(), SCIPdeactiveCons(), SCIPinitlpCons(), SCIPsepalpCons(), SCIPsepasolCons(), SCIPpropCons(),
  SCIPrespropCons(), SCIPenfopsCons(), SCIPenfolpCons()
- added new stages SCIP_STAGE_INITPRESOLVE, SCIP_STAGE_EXITPRESOLVE, and SCIP_STAGE_FREE; renamed SCIP_STAGE_FREESOLVE
  to SCIP_STAGE_EXITSOLVE
- new method SCIPisHugeValue() to check whether a value is huge and should be handled separately from other values